fix: remove page-content z-index

--- a/src/page/page.component.scss
+++ b/src/page/page.component.scss
@@ -66,7 +66,6 @@
   &__content {
     min-height: 100vh;
     position: relative;
-    z-index: 100;
     padding: var(--aui-page-padding-m);
   }
 
